add: Full GC 방지 내용 추가